--- a/app/src/main/res/color/tab_color.xml
+++ b/app/src/main/res/color/tab_color.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:color="@color/white"
         android:state_checked="true" />
-    <item android:color="@color/grey" />
+    <item android:color="@color/theme_Color" />
 </selector>
