--- a/app/src/main/res/layout/auth_toolbar.xml
+++ b/app/src/main/res/layout/auth_toolbar.xml
@@ -17,9 +17,10 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="data"
+        style="@style/WrapTextView"
+        android:layout_centerInParent="true"
+        android:text="Home"
+        android:textSize="@dimen/_14sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
