--- a/app/src/main/res/drawable/bg_layout_radius_colored.xml
+++ b/app/src/main/res/drawable/bg_layout_radius_colored.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:shape="rectangle">
 
-    <solid android:color="@color/white"/>
-
-    <corners android:topLeftRadius="@dimen/_10sdp"
-        android:topRightRadius="@dimen/_10sdp"/>
-
+    <solid android:width="@dimen/_1sdp"
+        android:color="@color/theme_Color"/>
+    <corners android:radius="@dimen/_5sdp"/>
 
 </shape>
