--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="theme_Color">#37c1f8</color>
     <color name="placeholder_Color">#e1f4fd</color>
+    <color name="placeholder_Color2">#f3f4f4</color>
     <color name="grey">#6B6B6B</color>
     <color name="lightGrayA3A3A3">#A3A3A3</color>
     <color name="lightGrayDDDCDC">#DDDCDC</color>
