--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -83,7 +83,7 @@
                 android:text="Rony" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnEditProfile"
+                android:id="@+id/btnSave"
                 style="@style/ButtonMatch"
                 android:layout_marginTop="@dimen/_60sdp"
                 android:layout_marginStart="@dimen/_10sdp"
