--- a/app/src/main/res/layout/activity_edit_pet_profile.xml
+++ b/app/src/main/res/layout/activity_edit_pet_profile.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".ui.main.ui.editpetprofile.EditPetProfileActivity">
 
-    <include layout="@layout/auth_toolbar" />
+    <include
+        android:id="@+id/tb"
+        layout="@layout/auth_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -21,6 +23,7 @@
             android:orientation="vertical">
 
             <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/riv_pet"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_150sdp"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -30,21 +33,178 @@
 
             <TextView
                 style="@style/WrapTextView"
-                android:text="@string/name"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:textSize="@dimen/_14sdp"
-                />
+                android:text="@string/name"
+                android:textSize="@dimen/_14sdp" />
 
             <EditText
                 style="@style/MatchEditText"
-                android:background="@drawable/bg_edit_text"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_edit_text"
                 android:hint="@string/enter_name"
-                android:paddingStart="@dimen/_10sdp"
-                android:text="@{signUpVM.name}"
-                android:imeOptions="actionNext"
+                android:imeOptions="actionDone"
                 android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/WrapTextView"
+                        android:text="@string/gender"
+                        android:textSize="@dimen/_14sdp" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerGender"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
+
+                    </RelativeLayout>
+
+
+                    <TextView
+                        style="@style/WrapTextView"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:text="@string/weight"
+                        android:textSize="@dimen/_14sdp" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerWeight"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/WrapTextView"
+                        android:text="@string/age"
+                        android:textSize="@dimen/_14sdp" />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerAge"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
+
+                    </RelativeLayout>
+
+
+                    <TextView
+                        style="@style/WrapTextView"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:text="@string/breed"
+                        android:textSize="@dimen/_14sdp" />
+
+                    <EditText
+                        style="@style/MatchEditText"
+                        android:background="@drawable/bg_edit_text"
+                        android:hint="@string/breed"
+                        android:imeOptions="actionDone"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:inputType="textEmailAddress"
+                        android:paddingStart="@dimen/_10sdp"
+                        android:paddingEnd="@dimen/_10sdp" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                style="@style/WrapTextView"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="@string/about_pet"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                style="@style/MatchEditText"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_edit_text"
+                android:gravity="start|top"
+                android:hint="@string/about_pet"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:maxHeight="@dimen/_100sdp"
+                android:minHeight="@dimen/_100sdp"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:textColorHint="@color/black" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnUpdate"
+                style="@style/ButtonMatch"
+                android:layout_margin="@dimen/_20sdp"
+                android:background="@drawable/button_bg_10dp"
+                android:contentDescription="@string/image"
+                android:text="@string/update" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
