--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.main.ui.petdetail.YourPetDetailActivity">
     <include
         layout="@layout/auth_toolbar"
+        android:id="@+id/tb"
         />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content">
 
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:layout_width="@dimen/_150sdp"
             android:layout_height="@dimen/_150sdp"
             android:src="@drawable/frame"
