--- a/app/src/main/res/layout/dialog_pet_profile_update.xml
+++ b/app/src/main/res/layout/dialog_pet_profile_update.xml
@@ -2,8 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/bg_white_corners_10dp"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:paddingStart="@dimen/_40sdp"
+    android:paddingEnd="@dimen/_40sdp"
+    android:paddingTop="@dimen/_20sdp"
+    android:paddingBottom="@dimen/_20sdp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -21,7 +25,7 @@
         android:layout_gravity="center"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/login"
+        android:id="@+id/done"
         style="@style/ButtonMatch"
         android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_30sdp"
