--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -55,10 +55,12 @@
         <item name="android:textColor">@color/black</item>
         <item name="fontFamily">@font/opensans_regular</item>
         <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:textColorHint">@color/lightGrayA3A3A3</item>
     </style>
 
     <style name="ButtonMatch" parent="Widget.AppCompat.Button">
         <item name="textAllCaps">false</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
         <item name="android:layout_height">@dimen/_35sdp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:textColor">@color/white</item>
